--- a/app/_layout.css
+++ b/app/_layout.css
@@ -11,7 +11,8 @@ body {
   margin: 0;
   position: relative;
   max-width: 100vw;
-  background-color: var(--bodyBg) !important;
+  /* background-color: var(--bodyBg) !important; */
+  background: linear-gradient(to bottom, #071E99, #031C4E) !important;
 }
 
 a {
